--- a/Builds/VisualStudio2019/OtoDecks_App.vcxproj.filters
+++ b/Builds/VisualStudio2019/OtoDecks_App.vcxproj.filters
@@ -364,6 +364,9 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\Source\WaveformDisplay.cpp">
+      <Filter>OtoDecks\Source</Filter>
+    </ClCompile>
     <ClCompile Include="..\..\Source\DeckGUI.cpp">
       <Filter>OtoDecks\Source</Filter>
     </ClCompile>
@@ -1953,6 +1956,9 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\Source\WaveformDisplay.h">
+      <Filter>OtoDecks\Source</Filter>
+    </ClInclude>
     <ClInclude Include="..\..\Source\DeckGUI.h">
       <Filter>OtoDecks\Source</Filter>
     </ClInclude>
