--- a/Builds/VisualStudio2019/OtoDecks_App.vcxproj.filters
+++ b/Builds/VisualStudio2019/OtoDecks_App.vcxproj.filters
@@ -364,6 +364,9 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\Source\MiddleDeck.cpp">
+      <Filter>OtoDecks\Source</Filter>
+    </ClCompile>
     <ClCompile Include="..\..\Source\PlaylistComponent.cpp">
       <Filter>OtoDecks\Source</Filter>
     </ClCompile>
@@ -1959,6 +1962,9 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\Source\MiddleDeck.h">
+      <Filter>OtoDecks\Source</Filter>
+    </ClInclude>
     <ClInclude Include="..\..\Source\PlaylistComponent.h">
       <Filter>OtoDecks\Source</Filter>
     </ClInclude>
